+ Check func logic added + Added some selftesting